# feynrules-auto

./: feynrules-auto.cabal
exe/: feynrules-auto.hs
lib/HEP/Automation/FeynRules/: Command.hs  Config.hs  Job.hs  ProgType.hs  Type.hs
template/: ModelDriver.m.st
