Name:		feynrules-auto
Version:	0.0
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     template/*.m.st


Executable feynrules-auto
  Main-is: feynrules-auto.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, feynrules-auto

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, configparser>0.0.2, parsec>3, 
                   HStringTemplate, HStringTemplateHelpersIW
  Exposed-Modules:      
                   HEP.Automation.FeynRules.Type
                   HEP.Automation.FeynRules.ProgType
                   HEP.Automation.FeynRules.Job
                   HEP.Automation.FeynRules.Command
                   HEP.Automation.FeynRules.Config
  Other-Modules: 
                   Paths_feynrules_auto
 
		 